--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
                 <div id="toggle-powers" class="hidden">
                     <div class="cards-container">
                         <div class="card">
-                            <img src="web-shooters.png" alt="Lançadores de teia">
+                            <img src="lança.jpg" alt="Lançadores de teia">
                             <h3>Lançadores de Teia</h3>
                             <p>Peter Parker usa dispositivos para lançar teias sintéticas que ele usa para balançar entre edifícios e capturar inimigos.</p>
                         </div>
                         <div class="card">
-                            <img src="super-strength.png" alt="Força Sobre-Humana">
+                            <img src="força.jpg" alt="Força Sobre-Humana">
                             <h3>Força Sobre-Humana</h3>
                             <p>Ele possui força sobre-humana, capaz de levantar e carregar grandes pesos.</p>
                         </div>
                         <div class="card">
-                            <img src="wall-crawling.png" alt="Escalar Paredes">
+                            <img src="escala.jpg" alt="Escalar Paredes">
                             <h3>Escalar Paredes</h3>
                             <p>Peter pode se agarrar e escalar paredes e outras superfícies verticais.</p>
                         </div>
                         <div class="card">
-                            <img src="spider-sense.png" alt="Sentido Aracnídeo">
+                            <img src="sentido.jpg" alt="Sentido Aracnídeo">
                             <h3>Sentido Aracnídeo</h3>
                             <p>Uma habilidade de percepção extra que alerta Peter para perigos iminentes.</p>
                         </div>
@@ -97,9 +97,9 @@
             <div class="container">
                 <h2>Galeria</h2>
                 <div class="gallery">
-                    <img src="spiderman1.jpg" alt="Homem-Aranha em Ação">
-                    <img src="spiderman2.jpg" alt="Homem-Aranha na Cidade">
-                    <img src="spiderman3.jpg" alt="Homem-Aranha e seus Aliados">
+                    <img src="spidercity.jpg" alt="Homem-Aranha em Ação">
+                    <img src="spiders.jpg" alt="Homem-Aranha na Cidade">
+                    <img src="homens.jpg" alt="Homem-Aranha e seus Aliados">
                 </div>
             </div>
         </section>
