--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
                 <h2>Vilões</h2>
                 <div class="villain-card-container">
                     <div class="villain-card" data-villain="Duende Verde">
-                        <img src="green-goblin.png" alt="Duende Verde">
+                        <img src="duende.jpg" alt="Duende Verde">
                         <p>Duende Verde</p>
                     </div>
                     <div class="villain-card" data-villain="Dr. Octopus">
-                        <img src="doc-oc.png" alt="Dr. Octopus">
+                        <img src="dr.jpg" alt="Dr. Octopus">
                         <p>Dr. Octopus</p>
                     </div>
                     <div class="villain-card" data-villain="Venom">
-                        <img src="venom.png" alt="Venom">
+                        <img src="venom.jpg" alt="Venom">
                         <p>Venom</p>
                     </div>
                     <div class="villain-card" data-villain="Electro">
-                        <img src="electro.png" alt="Electro">
+                        <img src="electro.jpeg" alt="Electro">
                         <p>Electro</p>
                     </div>
                     <div class="villain-card" data-villain="Rei do Crime">
-                        <img src="kingpin.png" alt="Rei do Crime">
+                        <img src="rei.jpg" alt="Rei do Crime">
                         <p>Rei do Crime</p>
                     </div>
                 </div>
