--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <h2>Redes Sociais</h2>
                 <div id="social">
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/MarvelBR/?locale=pt_BR" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
-                        <a href="https://x.com/marvelsspiderbr" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
-                        <a href="https://www.instagram.com/spiderman/?hl=pt-br" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+                        <a href="https://www.facebook.com/MarvelBR/?locale=pt_BR" target="_blank"><img src="face.png" alt="Facebook"></a>
+                        <a href="https://x.com/marvelsspiderbr" target="_blank"><img src="x.jpg" alt="Twitter"></a>
+                        <a href="https://www.instagram.com/spiderman/?hl=pt-br" target="_blank"><img src="insta.png" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
