--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 id="site-title">O Mundo do Homem-Aranha</h1>
+        <h1 id="site-title">Spider Man</h1>
         <nav>
             <ul>
                 <li><a href="#about">Sobre</a></li>
