--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2024 O Mundo do Homem-Aranha
+        &copy; amo a fernanda
     </footer>
 </body>
 </html>
